added cards filp and switch between light/dark

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -40,7 +40,7 @@
 
                 <div class="flip">
                     <div class="inner">
-                        <div id="lunaP" class="card-front"></div>
+                        <div id="card1" class="card-front"></div>
                         <div class="card-back">
                             <h3>Ministudios</h3>
                                 <nav>
@@ -65,7 +65,7 @@
             <section id="research">
                 <div class="flip">
                     <div class="inner">
-                        <div id="lunaR" class="card-front"></div>
+                        <div id="card2" class="card-front"></div>
                         <div class="card-back">
                             <h3>Research</h3>
                             <nav>
@@ -86,7 +86,7 @@
             <section id="development">
                 <div class="flip">
                     <div class="inner">
-                        <div id="lunaD" class="card-front"></div>
+                        <div id="card3" class="card-front"></div>
                         <div class="card-back">
                             <h3>Development</h3>
                                 <nav>
@@ -107,7 +107,7 @@
             <section id="capstone">
                 <div class="flip">
                     <div class="inner">
-                        <div id="lunaC" class="card-front"></div>
+                        <div id="card4" class="card-front"></div>
                         <div class="card-back">
                             <h3>Capstone</h3>
                             <nav>
@@ -121,7 +121,7 @@
                 </div>
             </section>
 
-            <button>Change</button>
+            <button>WOOF</button>
 
         </main>
 
