html closing tag error fixed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>Home is...DES 157B!</title>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet">
     <script src="script.js" defer></script>
 
 </head>
@@ -59,6 +59,7 @@
                                     </ol>
                                 </nav>
                         </div>
+                    </div>
                 </div>
             </section>
 
