--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <title>Home is...DES 157B!</title>
 
+    <!-- link to normalize -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
+    <!-- link to styles.css -->
     <link href="styles.css" rel="stylesheet">
+
+    <!-- link to script.js -->
     <script src="script.js" defer></script>
 
 </head>
