--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <h3>Ministudios</h3>
                                 <nav>
                                     <ol>
-                                        <li><a href="blockbuster/index.html">blockbuster video</a></li>
+                                        <li><a href="ministudio1/index.html">blockbuster video</a></li>
                                         <li><a href="#">check yourself</a></li>
                                         <li><a href="#">library liberty</a></li>
                                     </ol>
@@ -57,7 +57,7 @@
                                 <h3>Toolkit</h3>
                                 <nav>
                                     <ol>
-                                        <li><a href="friendslist/index.html">Friends List</a></li>
+                                        <li><a href="toolkit/index.html">Friends List</a></li>
                                         <li><a href="#">Toolkit Assignment 2</a></li>
                                         <li><a href="#">Toolkit Assignment 3</a></li>
                                     </ol>
@@ -75,7 +75,7 @@
                             <h3>Research</h3>
                             <nav>
                                 <ul>
-                                    <li><a href="#">Research Assignment 1</a></li>
+                                    <li><a href="research/brainstorm.html">Capstone Project Brainstorm</a></li>
                                     <li><a href="#">Research Assignment 2</a></li>
                                     <li><a href="#">Research Assignment 3 </a></li>
                                     <li><a href="#">Research Assignment 4 </a></li>
