--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <nav>
                                 <ul>
                                     <li><a href="research/brainstorm.html">Capstone Project Brainstorm</a></li>
-                                    <li><a href="#">Research Assignment 2</a></li>
+                                    <li><a href="research/proposal.html">Project Proposal</a></li>
                                     <li><a href="#">Research Assignment 3 </a></li>
                                     <li><a href="#">Research Assignment 4 </a></li>
                                     <li><a href="#">Research Assignment 5 </a></li>
