--- a/research/proposal.html
+++ b/research/proposal.html
@@ -22,23 +22,26 @@
     
         <section id="right">
             <p>
-                For my project, I will be working on . . .
-                    <br>- What is your topic and who is the target audience?
-                    <br>- Do you plan to work with a partner? If so, who?
-                    <br>- What are some of the features you imagine your project/product would include?
+                For my project, I will be working on the intersection between AI and social justice. My target audience includes individuals interested in both technology and social justice issues. This could encompass a diverse range of people like activists, technologists, and concerned citizens.I think working with a partner would help to bring more diverse perspectives to the project, but I am not sure who my partner would be.
             </p>
             <p>
-                My project is inspired by . . .
-                Identify lenses we have discussed in class that your topic may rely on most
-                    <br>- Speculative Design
-                    <br>- Challenging Mental Models
-                    <br>- Data visualization
-                    <br>- Utopian / Dystopian narratives
-                    <br>- Other ideas?
+                Features included in project/product:<br>
+                - Case Studies: Highlighting real-world examples<br>
+                - Educational Content: providing accessible & informative resources
+            </p>
+            <p>
+                My project is inspired by . . .<br>
+                Speculative Design: can create artifacts, scenarios, or narratives that provoke critical thinking and discussion about the implications of AI on marginalized communities and societal structures.<br>
+
+                Challenging Mental Models: exploration of alternative viewpoints and solutions to address systemic inequalities perpetuated by AI technologies.<br>
+
+                Data Visualization: patterns, disparities, and impacts that might otherwise be overlooked.<br>
+
+                Ethical Frameworks and Human Rights: analyzing how AI systems can either respect or infringe upon basic rights like privacy and fair treatment, especially among marginalized groups.<br>
             </p>
             <p>
                 Given the remaining time constraint for this class. . . 
-                <br>- Are there possible tangents, challenges, concerns, or vague ideas related to your ideas? (It could go this direction... I am not sure about X, and I don't know how I might deal with Y). 
+                <br>I need to specify my focus and think about what is feasable in the remaining weeks as I tend to take on more work than I can chew.
             </p>
         </section>
     </main>
