added html file for studio2

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                                 <ul>
                                     <li><a href="research/brainstorm.html">Capstone Project Brainstorm</a></li>
                                     <li><a href="research/proposal.html">Project Proposal</a></li>
-                                    <li><a href="#">Research Assignment 3 </a></li>
-                                    <li><a href="#">Research Assignment 4 </a></li>
+                                    <li><a href="#">Comparitive Analysis </a></li>
+                                    <li><a href="#">Annotated Biblography </a></li>
                                     <li><a href="#">Research Assignment 5 </a></li>
                                     <li><a href="#">Research Assignment 6 </a></li>
                                 </ul>
