added json data

--- a/ministudio2/index.html
+++ b/ministudio2/index.html
@@ -21,16 +21,16 @@
 <body>
     <div id="container">
         <header>
-            <h2></h2>
-            <h1 id="date">April 29</h1>
+            <h2>Luna & Jiji's Adentures</h2>
+            <h1 id="date">April 26</h1>
         </header>
 
-        <p id="overlay" class="hidden">drag your mouse across the screen</p>
+        <p id="instructions" class="hidden">drag your mouse across the screen</p>
 
 
         <section>
-            <img src="images/" alt="wallpaper" id="wallpaper">
-            <h3 id="time">11:23pm</h3>
+            <img src="images/April26_Morning.jpg" alt="wallpaper" id="wallpaper">
+            <h3 id="time">10:34am</h3>
         </section>
     </div>
     
