--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <nav>
                                     <ol>
                                         <li><a href="ministudio1/index.html">blockbuster video</a></li>
-                                        <li><a href="#">check yourself</a></li>
+                                        <li><a href="ministudio2/index.html">check yourself</a></li>
                                         <li><a href="#">library liberty</a></li>
                                     </ol>
                                 </nav>
