--- a/ministudio2/index.html
+++ b/ministudio2/index.html
@@ -22,14 +22,14 @@
     <div id="container">
         <header>
             <h2>Luna & Jiji's Adentures</h2>
-            <h1 id="date">April 26</h1>
+            <h1 id="date">April 26, 2024 - Morning</h1>
         </header>
 
         <p id="instructions" class="hidden">drag your mouse across the screen</p>
 
 
         <section>
-            <img src="images/April26_Morning.jpg" alt="wallpaper" id="wallpaper">
+            <img src="images/April26_Morning.jpg" alt="wallpaper" id="image-url">
             <h3 id="time">10:34am</h3>
         </section>
     </div>
