--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <h3>Toolkit</h3>
                                 <nav>
                                     <ol>
-                                        <li><a href="toolkit/index.html">Friends List</a></li>
+                                        <li><a href="toolkit/friendslist/index.html">Friends List</a></li>
                                         <li><a href="#">Toolkit Assignment 2</a></li>
                                         <li><a href="#">Toolkit Assignment 3</a></li>
                                     </ol>
