--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                     <ol>
                                         <li><a href="toolkit/friendslist/index.html">Friends List</a></li>
                                         <li><a href="toolkit/leaflet/index.html">Leaflet</a></li>
-                                        <li><a href="#">Toolkit Assignment 3</a></li>
+                                        <li><a href="toolkit/arrowfunc/">Toolkit Assignment 3</a></li>
                                     </ol>
                                 </nav>
                         </div>
