--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     <ol>
                                         <li><a href="ministudio1/index.html">blockbuster video</a></li>
                                         <li><a href="ministudio2/index.html">check yourself</a></li>
-                                        <li><a href="#">library liberty</a></li>
+                                        <li><a href="ministudio3/index.html">library liberty</a></li>
                                     </ol>
                                 </nav>
                                 <h3>Toolkit</h3>
