interact.js works

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- link to normalize -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 
+    <!-- link to font awesome -->
+    <script src="https://kit.fontawesome.com/c8fb36698b.js" crossorigin="anonymous"></script>
+
     <!-- link to styles.css -->
     <link href="styles.css" rel="stylesheet">
 
@@ -126,7 +129,7 @@
                 </div>
             </section>
 
-            <button>WOOF</button>
+            <button><i class="fa-solid fa-bone btn">WOOF</i></button>
 
         </main>
 
