--- a/ministudio3/index.html
+++ b/ministudio3/index.html
@@ -11,19 +11,20 @@
 
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     
-    <script src="granim.min.js"></script>
-    <script src="interact.min.js"></script>
+    <!-- <script src="granim.min.js"></script> -->
 
     <script src="script.js" defer></script>
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-    <canvas id="granim-canvas">
+<body id="granim-canvas">
+        <h1>Library Liberty</h1>
+        <main>
         <div class="tap-target">
             <p>Tap to change color</p>
             <p>Doubletap to change size</p>
             <p>Hold to rotate</p>
-          </div>
-    </canvas>
+        </div>
+        </main>
+    
 </body>
 </html>
