added 3 img layout

--- a/ministudio3/index.html
+++ b/ministudio3/index.html
@@ -19,10 +19,20 @@
         <main>
             <h1>Library Liberty</h1>
             <div class="container">
-                <div class="tap-target">
-                    <p>Tap to change color</p>
-                    <p>Doubletap to change size</p>
-                    <p>Hold to rotate</p>
+                <div class="img1 tap-target">
+                    <p class="text">Tap to change color</p>
+                    <p class="text">Doubletap to change size</p>
+                    <p class="text">Hold to rotate</p>
+                </div>
+                <div class="img2 tap-target">
+                    <p class="text">Tap to change color</p>
+                    <p class="text">Doubletap to change size</p>
+                    <p class="text">Hold to rotate</p>
+                </div>
+                <div class="img3 tap-target">
+                    <p class="text">Tap to change color</p>
+                    <p class="text">Doubletap to change size</p>
+                    <p class="text">Hold to rotate</p>
                 </div>
             </div>
             <canvas id="granim-canvas"></canvas>
