updated bio link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     <li><a href="research/brainstorm.html">Capstone Project Brainstorm</a></li>
                                     <li><a href="research/proposal.html">Project Proposal</a></li>
                                     <li><a href="#">Comparitive Analysis </a></li>
-                                    <li><a href="#">Annotated Biblography </a></li>
+                                    <li><a href="research/bibliography.html">Annotated Biblography </a></li>
                                     <li><a href="#">Research Assignment 5 </a></li>
                                     <li><a href="#">Research Assignment 6 </a></li>
                                 </ul>
