--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                             <nav>
                                 <ul>
                                     <li><a href="research/brainstorm.html">Capstone Project Brainstorm</a></li>
-                                    <li><a href="research/proposal.html">Project Proposal</a></li>
                                     <li><a href="#">Comparitive Analysis </a></li>
                                     <li><a href="research/bibliography.html">Annotated Biblography </a></li>
+                                    <li><a href="#">Feasibility Report </a></li>
                                     <li><a href="#">Research Assignment 5 </a></li>
                                     <li><a href="#">Research Assignment 6 </a></li>
                                 </ul>
@@ -99,9 +99,9 @@
                             <h3>Development</h3>
                                 <nav>
                                     <ul>
-                                        <li><a href="#">Development Assignment 1</a></li>
-                                        <li><a href="#">Development Assignment 2</a></li>
-                                        <li><a href="#">Development Assignment 3 </a></li>
+                                        <li><a href="development/proposal.html">Project Proposal</a></li>
+                                        <li><a href="#">User Journy</a></li>
+                                        <li><a href="#">Paper Prototype</a></li>
                                         <li><a href="#">Development Assignment 4 </a></li>
                                         <li><a href="#">Development Assignment 5 </a></li>
                                         <li><a href="#">Development Assignment 6 </a></li>
