updated feasibility report

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                             <h3>Ministudios</h3>
                                 <nav>
                                     <ol>
-                                        <li><a href="ministudio1/index.html">blockbuster video</a></li>
-                                        <li><a href="ministudio2/index.html">check yourself</a></li>
-                                        <li><a href="ministudio3/index.html">library liberty</a></li>
+                                        <li><a href="ministudio1/index.html">Blockbuster video</a></li>
+                                        <li><a href="ministudio2/index.html">Check yourself</a></li>
+                                        <li><a href="ministudio3/index.html">Library liberty</a></li>
                                     </ol>
                                 </nav>
                                 <h3>Toolkit</h3>
@@ -120,8 +120,8 @@
                             <h3>Capstone</h3>
                             <nav>
                                 <ul>
-                                    <li><a href="#">case study</a></li>
-                                    <li><a href="#">project</a></li>
+                                    <li><a href="#">Case study</a></li>
+                                    <li><a href="#">Project</a></li>
                                 </ul>
                             </nav>
                         </div>
