--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         <li><a href="development/proposal.html">Project Proposal</a></li>
                                         <li><a href="#">User Journy</a></li>
                                         <li><a href="#">Paper Prototype</a></li>
-                                        <li><a href="#">Development Assignment 4 </a></li>
+                                        <li><a href="development/version1/index.html">Version 1 </a></li>
                                         <li><a href="#">Development Assignment 5 </a></li>
                                         <li><a href="#">Development Assignment 6 </a></li>
                                     </ul>
