--- a/development/version2/index.html
+++ b/development/version2/index.html
@@ -19,8 +19,8 @@
     <link href="styles.css" rel="stylesheet">
 
     <!-- link to jQuery UI -->
-    <script src="js/jquery-3.1.1.js" defer></script>
-    <script src="js/jquery-ui.js" defer></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" defer></script>
+    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js" defer></script>
 
     <!-- link to script.js -->
     <script src="script.js" defer></script>
@@ -29,16 +29,16 @@
 </head>
 
 <body>
-
+       
     <div class="left-sidebar-grid">
         <header class="header">
-            <h2>Drag and Drop using AJAX/JQuery</h2>
+            <h1>AI and Inequalities in Job Search</h1>
         </header>
         
         <main class="main-content">
             <div class="pull-right">
                 <div>
-                    <div class="form-group">
+                    <div id="droppable" class="form-group">
                         <input type="text" id="word" name="program" class="form-control p_lang ui-droppable" />
                         <label>Drop your choice here</label><br>
 
@@ -55,17 +55,17 @@
         <section class="left-sidebar">
             <div>
                 <label>Select your option</label>
-                <ul id="draggable">
-                    <li>Text 1</li>
-                    <li>Text 2 </li>
-                    <li>Text 3</li>
-                    <li>Text 4</li>
-                    <li>Text 5</li>
-                    <li>Text 6</li>
-                    <li>Text 7</li>
-                    <li>Text 8</li>
-                    <li>Text 9</li>
-                    <li>Text 10</li>
+                <ul>
+                    <li class="draggable">Text 1</li>
+                    <li class="draggable">Text 2 </li>
+                    <li class="draggable">Text 3</li>
+                    <li class="draggable">Text 4</li>
+                    <li class="draggable">Text 5</li>
+                    <li class="draggable">Text 6</li>
+                    <li class="draggable">Text 7</li>
+                    <li class="draggable">Text 8</li>
+                    <li class="draggable">Text 9</li>
+                    <li class="draggable">Text 10</li>
                 </ul>
                 <p></p>
             </div>
