--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                         <li><a href="#">User Journy</a></li>
                                         <li><a href="#">Paper Prototype</a></li>
                                         <li><a href="development/version1/index.html">Version 1 </a></li>
-                                        <li><a href="#">Development Assignment 5 </a></li>
+                                        <li><a href="development/version2/index.html">Version 2 </a></li>
                                         <li><a href="#">Development Assignment 6 </a></li>
                                     </ul>
                                 </nav>
