--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                                         <li><a href="#">Paper Prototype</a></li>
                                         <li><a href="development/version1/index.html">Version 1 </a></li>
                                         <li><a href="development/version2/index.html">Version 2 </a></li>
-                                        <li><a href="#">Development Assignment 6 </a></li>
+                                        <li><a href="development/usability testing/testing.html">Usability Testing</a></li>
+                                        <li><a href="#">Usability Results</a></li>
                                     </ul>
                                 </nav>
                         </div>
