v2 - popup on click

--- a/development/version2/index.html
+++ b/development/version2/index.html
@@ -37,42 +37,59 @@
         <div id="col-1">
             <figure>
                 <img src="https://i.postimg.cc/qRh1Mj3k/fotor-ai-2024060411615.jpg" alt="Abstract image" />
-                <figcaption><a href="#popupOverlay">Applicant Tracking Systems (ATS)</a></figcaption>
             </figure>
+            <a href="#" class="lightbox" onclick="lightbox_open(this)">Applicant Tracking Systems (ATS)</a>
+            <div class="light" id="popup1">Applicant Tracking Systems (ATS)</div>
+            <div class="fade" onClick="lightbox_close()"></div>
         </div>
         <div id="col-2">
             <figure>
                 <img src="https://i.postimg.cc/qRh1Mj3k/fotor-ai-2024060411615.jpg" alt="Abstract image" />
-                <figcaption><a href="#">Job Description Analysis</a></figcaption>
             </figure>
+            <a href="#" class="lightbox" onclick="lightbox_open(this)">Job Description Analysis</a>
+            <div class="light" id="popup2">Job Description Analysis</div>
+            <div class="fade" onClick="lightbox_close()"></div>
         </div>
         <div id="col-3">
             <figure>
                 <img src="https://i.postimg.cc/qRh1Mj3k/fotor-ai-2024060411615.jpg" alt="Abstract image" />
-                <figcaption><a href="#">Linguistic Bias</a></figcaption>
             </figure>
+            <a href="#" class="lightbox" onclick="lightbox_open(this)">Linguistic Bias</a>
+            <div class="light" id="popup3">Linguistic Bias</div>
+            <div class="fade" onClick="lightbox_close()"></div>
         </div>  
         <div id="col-4">
             <figure>
                 <img src="https://i.postimg.cc/qRh1Mj3k/fotor-ai-2024060411615.jpg" alt="Abstract image" />
-                <figcaption><a href="#">Lack of Transparency</a></figcaption>
             </figure>
+            <a href="#" class="lightbox" onclick="lightbox_open(this)">Lack of Transparency</a>
+            <div class="light" id="popup4">Lack of Transparency</div>
+            <div class="fade" onClick="lightbox_close()"></div>
         </div>
         <div id="col-5">
             <figure>
                 <img src="https://i.postimg.cc/qRh1Mj3k/fotor-ai-2024060411615.jpg" alt="Abstract image" />
-                <figcaption><a href="#">Misuse of AI Tools</a></figcaption>
             </figure>
+            <a href="#" class="lightbox" onclick="lightbox_open(this)">Misuse of AI Tools</a>
+            <div class="light" id="popup5">Misuse of AI Tools</div>
+            <div class="fade" onClick="lightbox_close()"></div>
         </div>
         <div id="col-6">
             <figure>
                 <img src="https://i.postimg.cc/qRh1Mj3k/fotor-ai-2024060411615.jpg" alt="Abstract image" />
-                <figcaption><a href="#">Technical Literacy</a></figcaption>
             </figure>
+            <a href="#" class="lightbox" onclick="lightbox_open(this)">Technical Literacy</a>
+            <div class="light" id="popup5">Technical Literacy</div>
+            <div class="fade" onClick="lightbox_close()"></div>
         </div>  
     </div>
 
-    <div class="popup-overlay" id="popupOverlay">
+    <!-- <a href="#" class="lightbox" onclick="lightbox_open(this)">Open 1</a> -->
+    <!-- <div class="light" id="popup1">div 1</div>
+    <div class="fade" onClick="lightbox_close()"></div> -->
+
+
+    <!-- <div class="popup-overlay" id="popupOverlay">
 
         <div class="popup" id="popup">
             <span class="close" id="closePopup">&times;</span>
@@ -86,10 +103,9 @@
                                 <div id="droppable" class="form-group">
                                     
                                     <div>
-                                        <input type="text" id="word" name="program" class="form-control" />
+                                        <input type="text" id="word" name="program" class="form-control"/>
+                                        <label class="center"><strong>Make a choice here</strong></label><br>
                                     </div>
-                                    
-                                    <label class="center"><strong>Make a choice here</strong></label><br>
 
                                     <div class="btns">
                                         <button class="btn" id="reset" type="button"><span></span> Pro</button>
@@ -116,8 +132,8 @@
                     </section>    
                 </div>
             </div>
-        </div>
-    </div>
+        </div> -->
+    <!-- </div> -->
 </body>
 
 </html>
