--- a/capstone/final/index.html
+++ b/capstone/final/index.html
@@ -28,7 +28,7 @@
     <!-- link to script.js -->
     <script src="script.js" defer></script>
 
-    <title>Version 3</title>
+    <title>Final Project</title>
 </head>
 
 <body>
