--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
                                 <nav>
                                     <ul>
                                         <li><a href="development/proposal.html">Project Proposal</a></li>
-                                        <li><a href="#">User Journy</a></li>
-                                        <li><a href="#">Paper Prototype</a></li>
                                         <li><a href="development/version1/index.html">Version 1 </a></li>
                                         <li><a href="development/version2/index.html">Version 2 </a></li>
                                         <li><a href="development/usability testing/testing.html">Usability Testing</a></li>
                                         <li><a href="#">Usability Results</a></li>
+                                        <li><a href="development/version3/index.html">Version 3 </a></li>
                                     </ul>
                                 </nav>
                         </div>
@@ -121,8 +120,8 @@
                             <h3>Capstone</h3>
                             <nav>
                                 <ul>
-                                    <li><a href="#">Case study</a></li>
-                                    <li><a href="#">Project</a></li>
+                                    <li><a href="capstone/case study/index.html">Case study</a></li>
+                                    <li><a href="capstone/final/index.html">Project</a></li>
                                 </ul>
                             </nav>
                         </div>
