--- a/capstone/case study/index.html
+++ b/capstone/case study/index.html
@@ -9,11 +9,12 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 	
 	<!--/ /-------- Google Fonts --------/ /-->
-    <!-- add any google fonts you want to use -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	
 	<!--/ /-------- Font Awesome --------/ /-->
-    <!--Add this if you want icons from font awesome
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">-->
+    
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	
 	<!--/ /-------- Your Styles --------/ /-->
 	<link href="styles.css" rel="stylesheet">
@@ -24,10 +25,9 @@
 <body>
     <header id="top">
         <div class="container">
-            <h1>UX/UI Case Study Title Here</h1>
-            <p>Your Name Here</p>
+            <h1>UX/UI Case Study - AI and Inequalities in Job Search</h1>
+            <p>Elizabeth Hernandez Galvan</p>
             <address>Your email address (encoded so you don't get spam)</address>
-            <em>Feel free to change the colors, fonts, layout, HTML or CSS to suit. This template is provided simply as a starting point.</em>
         </div>
     </header>
     <nav>
@@ -143,8 +143,8 @@
 
     <footer>
         <div class="container">
-            <p>UX/UI Case Study Title Here</p>
-            <p>Your Name Here</p>
+            <p>UX/UI Case Study - AI and Inequalities in Job Search</p>
+            <p>Elizabeth Hernandez Galvan</p>
             <address>Your email address (encoded so you don't get spam)</address>
             <p><a href="#top">top</a></p>
         </div>
