case study updates

--- a/capstone/case study/index.html
+++ b/capstone/case study/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <h1>UX/UI Case Study - AI and Inequalities in Job Search</h1>
             <p>Elizabeth Hernandez Galvan</p>
-            <address>Your email address (encoded so you don't get spam)</address>
+            <address>&#101;&#104;&#101;&#114;&#110;&#097;&#110;&#100;&#101;&#122;&#103;&#097;&#108;&#118;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</address>
         </div>
     </header>
     <nav>
@@ -47,11 +47,14 @@
             <h2>Project Overview</h2>
             <img src="https://via.placeholder.com/1000x300">
             <div class="content">
-                <p>Laborum before they sold out consequat officia pinterest culpa. Butcher nulla everyday carry coloring book kickstarter. Keytar cold-pressed fugiat coloring book. Meggings etsy skateboard occaecat, palo santo tumblr laborum kitsch cornhole tilde beard quinoa trust fund blog pabst.</p>
+                <p>For this project, I am focusing on the intersection between artificial intelligence (AI) and social justice. The aim is to create a platform that serves as a informational platform for individuals interested in the social implications of AI.</p>
 
-                <p>Bushwick cardigan literally tote bag meh. Knausgaard aute ullamco, humblebrag fanny pack schlitz pop-up enim tattooed kickstarter. Hammock magna eu sint tbh. Pour-over beard retro truffaut freegan.</p>
+                <p>This platform will highlight real-world examples where AI has impacted social justice, speciffically in relation to jobs, both positively and negatively.</p>
                     
-                <p>Try-hard kombucha helvetica, post-ironic gastropub vape intelligentsia fam fixie non sunt portland skateboard raclette. Narwhal messenger bag keytar church-key. Gochujang gluten-free PBR&B thundercats. Knausgaard quis umami fingerstache YOLO. Intelligentsia selvage gentrify poutine sunt craft beer kombucha ut cupidatat tbh pour-over.</p>
+                <p>The primary target audience for this project includes:<br>
+                    - Activists<br>
+                    - Technologists <br>
+                    - Concerned Citizens</p>
             </div>
         </div>
     </section>
@@ -63,7 +66,7 @@
             <div class="content">
                 <p>Laborum before they sold out consequat officia pinterest culpa. Butcher nulla everyday carry coloring book kickstarter. Keytar cold-pressed fugiat coloring book. Meggings etsy skateboard occaecat, palo santo tumblr laborum kitsch cornhole tilde beard quinoa trust fund blog pabst.</p>
 
-                <p>Bushwick cardigan literally tote bag meh. Knausgaard aute ullamco, humblebrag fanny pack schlitz pop-up enim tattooed kickstarter. Hammock magna eu sint tbh. Pour-over beard retro truffaut freegan.Try-hard kombucha helvetica, post-ironic gastropub vape intelligentsia fam fixie non sunt portland skateboard raclette. Narwhal messenger bag keytar church-key. Gochujang gluten-free PBR&B thundercats. Knausgaard quis umami fingerstache YOLO. Intelligentsia selvage gentrify poutine sunt craft beer kombucha ut cupidatat tbh pour-over.</p>
+                <p>Creating user personas helped in understanding the needs, goals, and pain points of the target audience. Journey mapping will outline the steps users take to engage with the platform, identifying opportunities for enhancing their experience.</p>
 
                 <img src="https://via.placeholder.com/600">
             </div>
@@ -76,7 +79,7 @@
             <h2>Visual Design</h2>
             <div class="content">
                 <img src="https://via.placeholder.com/600">
-                <p>Laborum before they sold out consequat officia pinterest culpa. Butcher nulla everyday carry coloring book kickstarter. Keytar cold-pressed fugiat coloring book. Meggings etsy skateboard occaecat, palo santo tumblr laborum kitsch cornhole tilde beard quinoa trust fund blog pabst.</p>
+                <p>The visual design will focus on creating an intuitive and engaging user interface. The use of color, typography, and imagery will be carefully considered to reflect the themes of technology and social justice. Overally my color pallete includes a lot of blues are used in many Technology companies and the color can be associated with stability and success.</p>
 
                 <p>Bushwick cardigan literally tote bag meh. Knausgaard aute ullamco, humblebrag fanny pack schlitz pop-up enim tattooed kickstarter. Hammock magna eu sint tbh. Pour-over beard retro truffaut freegan.Try-hard kombucha helvetica, post-ironic gastropub vape intelligentsia fam fixie non sunt portland skateboard raclette. Narwhal messenger bag keytar church-key. Gochujang gluten-free PBR&B thundercats. Knausgaard quis umami fingerstache YOLO. Intelligentsia selvage gentrify poutine sunt craft beer kombucha ut cupidatat tbh pour-over.</p>
             </div>
@@ -131,7 +134,7 @@
         <div class="container">
             <h2>Summary</h2>
             <div class="content">
-                <p>Laborum before they sold out consequat officia pinterest culpa. Butcher nulla everyday carry coloring book kickstarter. Keytar cold-pressed fugiat coloring book. Meggings etsy skateboard occaecat, palo santo tumblr laborum kitsch cornhole tilde beard quinoa trust fund blog pabst.</p>
+                <p>This project aims to reveal the gap between AI and social justice by providing human perspectives. By leveraging speculative design, data visualization, and ethical frameworks, this platform seeks to showcase a deeper understanding of the societal impacts of AI both good and bad.</p>
 
                 <p>Bushwick cardigan literally tote bag meh. Knausgaard aute ullamco, humblebrag fanny pack schlitz pop-up enim tattooed kickstarter. Hammock magna eu sint tbh. Pour-over beard retro truffaut freegan.Try-hard kombucha helvetica, post-ironic gastropub vape intelligentsia fam fixie non sunt portland skateboard raclette.</p>
 
@@ -145,7 +148,7 @@
         <div class="container">
             <p>UX/UI Case Study - AI and Inequalities in Job Search</p>
             <p>Elizabeth Hernandez Galvan</p>
-            <address>Your email address (encoded so you don't get spam)</address>
+            <address>&#101;&#104;&#101;&#114;&#110;&#097;&#110;&#100;&#101;&#122;&#103;&#097;&#108;&#118;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;</address>
             <p><a href="#top">top</a></p>
         </div>
     </footer>
