updated draggable text

--- a/capstone/final/index.html
+++ b/capstone/final/index.html
@@ -13,7 +13,7 @@
 
     <!-- link to Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lilita+One&family=Poetsen+One&display=swap" rel="stylesheet">
  
     <!-- link to styles.css -->
     <link href="styles.css" rel="stylesheet">
@@ -68,7 +68,7 @@
                             <label><strong>Drag text into Box</strong></label>
                             <div>
                                 <p class="draggable" id="text-ats">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ipsa quasi obcaecati eaque dignissimos nemo laborum praesentium. Fuga illo eligendi aspernatur, sunt sint maxime iusto corrupti magnam ducimus inventore consequatur?
+                                    Some candidates might learn to game the AI and ATS system by tailoring their resumes with the "right" keywords, even if these do not accurately reflect their true qualifications?
                                 </p>
                             </div>
                         </div>
@@ -106,7 +106,7 @@
                             <label><strong>Drag text into Box</strong></label>
                             <div>
                                 <p class="draggable" id="text-ats">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ipsa quasi obcaecati eaque dignissimos nemo laborum praesentium. Fuga illo eligendi aspernatur, sunt sint maxime iusto corrupti magnam ducimus inventore consequatur?
+                                    AI systems are trained on historical data, which might reflect existing biases in job descriptions. If past job descriptions have been biased, the AI will likely perpetuate those biases?
                                 </p>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                             <label><strong>Drag text into Box</strong></label>
                             <div>
                                 <p class="draggable" id="text-ats">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ipsa quasi obcaecati eaque dignissimos nemo laborum praesentium. Fuga illo eligendi aspernatur, sunt sint maxime iusto corrupti magnam ducimus inventore consequatur?
+                                    AI might perpetuate gender stereotypes by suggesting or favoring gendered terms that reinforce traditional roles (For example: associating men with leadership roles)?
                                 </p>
                             </div>
                         </div>
@@ -182,7 +182,7 @@
                             <label><strong>Drag text into Box</strong></label>
                             <div>
                                 <p class="draggable" id="text-ats">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ipsa quasi obcaecati eaque dignissimos nemo laborum praesentium. Fuga illo eligendi aspernatur, sunt sint maxime iusto corrupti magnam ducimus inventore consequatur?
+                                    When AI systems make decisions without clear explanations, it becomes difficult to hold anyone accountable for the outcomes. If individuals affected by AI decisions cannot understand the rationale behind those decisions, they cannot effectively challenge or appeal them?
                                 </p>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                             <label><strong>Drag text into Box</strong></label>
                             <div>
                                 <p class="draggable" id="text-ats">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ipsa quasi obcaecati eaque dignissimos nemo laborum praesentium. Fuga illo eligendi aspernatur, sunt sint maxime iusto corrupti magnam ducimus inventore consequatur?
+                                    Misuse of AI can lead to ethical breaches. Organizations might use AI as a scapegoat to deflect responsibility for biased or harmful decisions, claiming that the technology, not human oversight, is at fault?
                                 </p>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                             <label><strong>Drag text into Box</strong></label>
                             <div>
                                 <p class="draggable" id="text-ats">
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis ipsa quasi obcaecati eaque dignissimos nemo laborum praesentium. Fuga illo eligendi aspernatur, sunt sint maxime iusto corrupti magnam ducimus inventore consequatur?
+                                    Individuals in lower-income communities may have limited access to the necessary technology (computers, smartphones, internet) to interact with AI tools, leading to unequal opportunities?
                                 </p>
                             </div>
                         </div>
