--- a/capstone/final/index.html
+++ b/capstone/final/index.html
@@ -270,7 +270,10 @@
         </div>  
     </div> 
 
-    <div id="countDisplay1" class="hidden">Count will be displayed here</div>
+    <div id="countDisplay1" class="hidden">
+        <span class="close" id="closeDisplay1" onClick="lightbox_close()">&times;</span>
+        Count will be displayed here
+    </div>
     <div id="countDisplay2" class="hidden">Count will be displayed here</div>
     <div id="countDisplay3" class="hidden">Count will be displayed here</div>
     <div id="countDisplay4" class="hidden">Count will be displayed here</div>
